--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <title>Angular-Course</title>
+    <link rel="stylesheet" href="build/css/app.min.css">
 </head>
 
 <body>
