[FEAT] Incluido ui-router y arreglado problema del cacheo de templates

--- a/www/index.html
+++ b/www/index.html
@@ -9,10 +9,9 @@
 </head>
 
 <body>
-    <div ng-controller="appController as vm">
-        <h1 id="title" ng-bind="vm.name"></h1>
-    </div>
+    <div ui-view></div>
 </body>
+
 <script rel="text/javascript" src="build/js/vendors.min.js"></script>
 <script rel="text/javascript" src="build/js/app.min.js"></script>
 
