Commit de primer controlador

--- a/www/index.html
+++ b/www/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="build/css/app.min.css">
 </head>
 
-<body>
-    
+<body ng-app="app" ng-controller="appController">
+    <span ng-bind="saludo"></span>
 </body>
 
 <script rel="text/javascript" src="build/js/vendors.min.js"></script>
