Creada directiva de elemento

--- a/src/template.html
+++ b/src/template.html
@@ -5,3 +5,5 @@
 <div ng-repeat="files in vm.file">
     <span ng-bind="files.name"></span>
 </div>
+
+<course-form fn="vm.login($event)"></course-form>
