Incluido modulo de registro y modulo de tasks

--- a/src/features/register/template.html
+++ b/src/features/register/template.html
@@ -1,5 +1,5 @@
 <header>
-    <h1>Login</h1>
+    <h1>Register</h1>
 </header>
 <main>
     <form>
@@ -14,5 +14,5 @@
 
         <button ng-click="vm.login()">Aceptar</button>
     </form>
-    <button ng-click="vm.goRegister()">Registrar Usuario</button>
+    <button ng-click="vm.backLogin()">Volver a Login</button>
 </main>
